<resources>
    <string name="app_name">InstaMine</string>
    <string name="password_hint">Write your password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Log in</string>
    <string name="username_hint">Put your username</string>
    <string name="email_hint">Write an email</string>
    <string name="send">Send</string>
    <string name="post_hint">Add a cool description</string>
    <string name="lorem_ipsum">Lorem Ipsum . . .</string>
    <string name="content_description_post">Post of timeline</string>
    <string name="content_description_userImage">Image of user</string>
    <string name="comment">comment</string>
    <string name="direct_message">Send Direct message to:</string>
    <string name="like_post">Like Post</string>
    <string name="Posts">Posts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
